--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+.MuiBox-root-8 button {
+  padding: 16px;
+  border-radius: 10px;
+  margin: 15px;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.MuiBox-root.MuiBox-root-2 {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.hi-avatar {
+  width: 50px !important;
+  height: 50px !important;
+  border-radius: 0 !important;
+  margin-right: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.device-guide {
+  background-color: #f9fafd;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 12px;
+}
+
+.highligted-text {
+  color: #4d4dcd;
+}
+
+.list-item {
+  display: flex;
+  align-items: flex-start;
+}
+
+.list-number {
+  background: #f0f1fa;
+  padding: 4px 8px;
+  margin-right: 8px;
+}
+
+.list-content {
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 1.3;
+}
+.scroll-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+
+/* Track */
+.scroll-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #eff2f6; 
+  border-radius: 10px;
+  background: #eff2f6;
+}
+
+/* Handle */
+.scroll-container::-webkit-scrollbar-thumb {
+  background: #c5cddd;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background: #b4c1da;
 }
